# Geometry

./: CMakeLists.txt  compiler_options.cmake  conanfile.py
include/Geometry/: Utils.hpp
include/Geometry/Types/: Fint_t.hpp  TypeAliases.hpp  Vec2.hpp  type_aliases.hpp
include/geometry/: utils.hpp
include/geometry/types/: type_aliases.hpp  vec2.hpp
include/types/: Alias.hpp  fint_t.hpp  fvec2.hpp  vec2.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/src/: fintTest.cpp  fint_test.cpp
test/unit/: CMakeLists.txt
test/unit/src/: fintTest.cpp  fint_test.cpp  idleTest.cpp  vec2Test.cpp  vec2_test.cpp
